--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dev = [
     "m2r",
     "vega_datasets",
     # following is rejected by PyPI
-    "altair_viewer @ git+https://github.com/mattijn/altair_viewer.git@vl5.8",
+    "altair_viewer @ git+https://github.com/altair/altair_viewer.git",
     "vl-convert-python",
     "mypy",
     "pandas-stubs",
