--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-    name: Python ${{ matrix.python-version }}
+        jsonschema-version: ["3.0", "4.17"]
+    name: py ${{ matrix.python-version }} js ${{ matrix.jsonschema-version }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -23,6 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install jsonschema==${{ matrix.jsonschema-version }}
           pip install .[dev]
           # pip install "selenium<4.3.0"
           # pip install altair_saver
