--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,8 @@ dev = [
 doc = [
     "sphinx",
     "docutils",
+    # This will be replaced with the package once released
+    "sphinxext_altair @ git+https://github.com/binste/sphinxext-altair.git@initial_version",
     "jinja2",
     "numpydoc",
     "pillow",
