--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,9 @@ include = [
     "pyproject.toml"
 ]
 
+[tool.hatch.build.targets.wheel]
+only-include = ["/altair"]
+
 [tool.hatch.envs.default]
 features = ["dev"]
 
