--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,12 +93,7 @@ path = "altair/__init__.py"
 allow-direct-references = true
 
 [tool.hatch.build]
-include = [
-    "/altair",
-    "README.md",
-    "LICENSE",
-    "pyproject.toml"
-]
+include = ["/altair"]
 
 [tool.hatch.envs.default]
 features = ["dev"]
