--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,8 @@ dev = [
     "mypy",
     "pandas-stubs",
     "types-jsonschema",
-    "types-setuptools"
+    "types-setuptools",
+    "pyarrow>=11"
 ]
 doc = [
     "sphinx",
