--- a/pyproject.toml
+++ b/pyproject.toml
@@ -228,7 +228,9 @@ module = [
     "pyarrow.*",
     "yaml.*",
     "vl_convert.*",
-    "pandas.lib.*"
+    "pandas.lib.*",
+    "nbformat.*",
+    "ipykernel.*"
 ]
 ignore_missing_imports = true
 
