Support extracting transformed chart data using VegaFusion (#3081)
* Port transformed_data functionality from VegaFusion

* Add initial transformed_data tests

* Test exclude flag to transformed_data

* chart.transformed_data -> chart._transformed_data. Make method internal while still experimental

* Add VegaFusion as dev dependency

* Add better error message when VegaFusion is not installed

* Make utils.transformed_data internal, use absolute imports

* Use DataFrameLike protocol for the transformed_data signature

The returned DataFrames can be arrow or Polars as well if those are used as the input to the Chart.

* Add NotImplementedError for RepeatChart

* Use Chart._get_name to name subcharts

* Protocol is available in Python 3.8

* Make DataFrameLike private for now

---------

Co-authored-by: Stefan Binder <binder_stefan@outlook.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,8 @@ dev = [
     "pandas-stubs",
     "types-jsonschema",
     "types-setuptools",
-    "pyarrow>=11"
+    "pyarrow>=11",
+    "vegafusion[embed]"
 ]
 doc = [
     "sphinx",
