Add ipython sphinx extension to evaluate Python snippets that don't render Altair charts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,8 @@ doc = [
     "geopandas",
     "myst-parser",
     "sphinx_copybutton",
-    "sphinx-design"
+    "sphinx-design",
+    "ipython"
 ]
 
 [tool.hatch.version]
