Remove ipython directive and use `altair-plot::` directive with `:output: repr`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,8 +85,7 @@ doc = [
     "geopandas",
     "myst-parser",
     "sphinx_copybutton",
-    "sphinx-design",
-    "ipython"
+    "sphinx-design"
 ]
 
 [tool.hatch.version]
