MAINT: Gitignore venv folders. Let black ignore all files which are in gitignore by switchting to extend-exclude

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,7 +155,7 @@ publish-clean-build = [
 line-length = 88
 target-version = ["py37", "py38", "py39", "py310", "py311"]
 include = '\.pyi?$'
-exclude = '''
+extend-exclude = '''
 /(
     \.eggs
   | \.git
