--- a/pyproject.toml
+++ b/pyproject.toml
@@ -220,6 +220,9 @@ markers = [
     "save_engine: marks some of the tests which are using an external package to save a chart to e.g. a png file. This mark is used to run those tests selectively in the build GitHub Action.",
 ]
 
+[tool.mypy]
+warn_unused_ignores = true
+
 [[tool.mypy.overrides]]
 module = [
     "vega_datasets.*",
@@ -229,7 +232,9 @@ module = [
     "pyarrow.*",
     "yaml.*",
     "vl_convert.*",
-    "pandas.lib.*"
+    "pandas.lib.*",
+    "nbformat.*",
+    "ipykernel.*"
 ]
 ignore_missing_imports = true
 
