--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ dev = [
     "vega_datasets",
     # following is rejected by PyPI
     "altair_viewer @ git+https://github.com/altair-viz/altair_viewer.git",
-    "vl-convert-python",
+    "vl-convert-python==0.10.3",
     "mypy",
     "pandas-stubs",
     "types-jsonschema",
@@ -80,7 +80,7 @@ doc = [
     "sphinxext_altair",
     "jinja2",
     "numpydoc",
-    "pillow",
+    "pillow>=9,<10",
     "pydata-sphinx-theme",
     "geopandas",
     "myst-parser",
