Drop support for Python 3.7 which is end-of-life

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         jsonschema-version: ["3.0", "4.17"]
     name: py ${{ matrix.python-version }} js ${{ matrix.jsonschema-version }}
     steps:
