--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
           # pip install "selenium<4.3.0"
           # pip install altair_saver
       - name: Maybe uninstall optional dependencies
+        # We uninstall pyarrow and vegafusion for one job to test that we have not
+        # accidentally introduced a hard dependency on these libraries.
+        # Uninstalling for Python 3.9 is an arbitrary choice.
+        # Also see https://github.com/altair-viz/altair/pull/3114
         if: ${{ matrix.python-version }}=="3.9"
         run: |
           pip uninstall -y pyarrow vegafusion vegafusion-python-embed
