--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,14 +14,15 @@ build-backend = "hatchling.build"
 
 [project]
 name = "altair"
-authors = [ {name = "Vega-Altair Contributors"} ]
+authors = [{ name = "Vega-Altair Contributors" }]
 dependencies = [
     "typing_extensions>=4.0.1; python_version<\"3.11\"",
     "jinja2",
     "jsonschema>=3.0",
     "numpy",
     "pandas>=0.18",
-    "toolz"
+    "toolz",
+    "packaging"
 ]
 description = "Vega-Altair: A declarative statistical visualization library for Python."
 readme = "README.md"
@@ -36,7 +37,7 @@ keywords = [
 requires-python = ">=3.8"
 dynamic = ["version"]
 license-files = { paths = ["LICENSE"] }
-classifiers= [
+classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
     "Intended Audience :: Science/Research",
@@ -70,7 +71,7 @@ dev = [
     "types-jsonschema",
     "types-setuptools",
     "pyarrow>=11",
-    "vegafusion[embed]"
+    "vegafusion[embed]",
 ]
 doc = [
     "sphinx",
@@ -83,7 +84,7 @@ doc = [
     "geopandas",
     "myst-parser",
     "sphinx_copybutton",
-    "sphinx-design"
+    "sphinx-design",
 ]
 
 [tool.hatch.version]
@@ -103,7 +104,7 @@ test = [
     "black --diff --color --check .",
     "ruff check .",
     "mypy altair tests",
-    "python -m pytest --pyargs --doctest-modules tests"
+    "python -m pytest --pyargs --doctest-modules tests",
 ]
 test-coverage = "python -m pytest --pyargs --doctest-modules --cov=altair --cov-report term altair"
 test-coverage-html = "python -m pytest --pyargs --doctest-modules --cov=altair --cov-report html altair"
@@ -113,15 +114,8 @@ features = ["dev", "doc"]
 
 [tool.hatch.envs.doc.scripts]
 clean = "rm -rf doc/_build"
-clean-generated = [
-    "rm -rf doc/user_guide/generated",
-    "rm -rf doc/gallery"
-]
-clean-all = [
-    "clean",
-    "clean-generated",
-    "rm -rf doc/_images"
-]
+clean-generated = ["rm -rf doc/user_guide/generated", "rm -rf doc/gallery"]
+clean-all = ["clean", "clean-generated", "rm -rf doc/_images"]
 clean-win = "if exist doc\\_build rd /s /q doc\\_build"
 clean-generated-win = [
     "if exist doc\\user_guide\\generated rd /s /q doc\\user_guide\\generated",
@@ -134,11 +128,11 @@ clean-all-win = [
 ]
 build-html = [
     "mkdir -p doc/_images",
-    "sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html"
+    "sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html",
 ]
 build-html-win = [
     "if not exist doc\\_images md doc\\_images",
-    "sphinx-build -b html -d doc\\_build\\doctrees doc doc\\_build\\html"
+    "sphinx-build -b html -d doc\\_build\\doctrees doc doc\\_build\\html",
 ]
 doctest = "sphinx-build -b doctest -d doc/_build/doctrees doc doc/_build/doctest"
 coverage = "sphinx-build -b coverage -d doc/_build/doctrees doc doc/_build/coverage"
@@ -146,7 +140,7 @@ serve = "(cd doc/_build/html && python -m http.server)"
 publish-clean-build = [
     "clean-all",
     "build-html",
-    "(cd doc && bash sync_website.sh)"
+    "(cd doc && bash sync_website.sh)",
 ]
 
 [tool.black]
@@ -182,10 +176,10 @@ select = [
     # pyflakes
     "F",
     # flake8-tidy-imports
-    "TID"
+    "TID",
 ]
 ignore = [
-    # E203, E266, W503 not yet supported by ruff, 
+    # E203, E266, W503 not yet supported by ruff,
     # see https://github.com/charliermarsh/ruff/issues/2402
     # Whitespace before ':'
     # "E203",
@@ -194,12 +188,12 @@ ignore = [
     # Line break occurred before a binary operator
     # "W503",
     # Line too long
-    "E501", 
+    "E501",
     # Relative imports are banned
     "TID252",
     # zip() without an explicit strict= parameter set.
     # python>=3.10 only
-    "B905"
+    "B905",
 ]
 exclude = [
     ".git",
@@ -232,12 +226,10 @@ module = [
     "vl_convert.*",
     "pandas.lib.*",
     "nbformat.*",
-    "ipykernel.*"
+    "ipykernel.*",
 ]
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = [
-    "altair.vegalite.v5.schema.*"
-]
+module = ["altair.vegalite.v5.schema.*"]
 ignore_errors = true
