--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ allow-direct-references = true
 
 [tool.hatch.build]
 include = ["/altair"]
-artifacts = ["altair/widget/js/index.js"]
+artifacts = ["altair/jupyter/js/index.js"]
 
 [tool.hatch.envs.default]
 features = ["dev"]
