--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,15 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python_version: ["3.8", "3.9", "3.10", "3.11"]
         jsonschema-version: ["3.0", "4.17"]
-    name: py ${{ matrix.python-version }} js ${{ matrix.jsonschema-version }}
+    name: py ${{ matrix.python_version }} js ${{ matrix.jsonschema-version }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python_version }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python_version: ${{ matrix.python_version }}
       # - name: Set Up Chromedriver
       #   run: |
       #     sudo apt-get update
@@ -33,14 +33,14 @@ jobs:
         # accidentally introduced a hard dependency on these libraries.
         # Uninstalling for Python 3.9 is an arbitrary choice.
         # Also see https://github.com/altair-viz/altair/pull/3114
-        if: matrix.python-version == "3.9"
+        if: matrix.python_version == "3.9"
         run: |
           pip uninstall -y pyarrow vegafusion vegafusion-python-embed
       - name: Maybe install lowest supported Pandas version
         # We install the lowest supported Pandas version for one job to test that
         # it still works. We do this for Python 3.8 as that is the last Python version
         # to work with this Pandas version.
-        if: matrix.python-version == "3.8"
+        if: matrix.python_version == "3.8"
         run: |
           pip install pandas==0.18
       - name: Test that schema generation has no effect
