--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,11 +38,11 @@ jobs:
           pip uninstall -y pyarrow vegafusion vegafusion-python-embed
       - name: Maybe install lowest supported Pandas version
         # We install the lowest supported Pandas version for one job to test that
-        # it still works. We do this for Python 3.8 as that is the last Python version
-        # to work with this Pandas version.
+        # it still works. Downgrade to the oldest versions of pandas and numpy that include
+        # Python 3.8 wheels, so only run this job for Python 3.8
         if: ${{ matrix.python-version == '3.8' }}
         run: |
-          pip install pandas==0.25.3
+          pip install pandas==0.25.3 numpy == 1.17.5
       - name: Test that schema generation has no effect
         run: |
           python tools/generate_schema_wrapper.py
