MAINT: Use importlib.metadata and packaging instead of deprecated pkg_resources (#3133)
* MAINT: Use importlib.metadata and packaging instead of deprecated pkg_resources

* Consolidate importlib.metadata imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "numpy",
     # If you update the minimum required pandas version, also update it in build.yml
     "pandas>=0.25",
-    "toolz"
+    "toolz",
+    "packaging"
 ]
 description = "Vega-Altair: A declarative statistical visualization library for Python."
 readme = "README.md"
