Add online JupyterChart widget based on AnyWidget (#3119)
* Add JupyterChart based on AnyWidget

* Store params in a traitlet object

* Make selections prop a dynamic traitlet class

* Skip vegafusion test when not installed

* Show errors the same was as the HTML renderer

* Update altair/jupyter/js/README.md

* Import JupyterChart in else

* import from top-level

* Move non-widget selection logic to `util.selection`

* Use lodash's debounce for maxWait functionality

---------

Co-authored-by: Mattijn van Hoek <mattijn@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,8 @@ dev = [
     "types-jsonschema",
     "types-setuptools",
     "pyarrow>=11",
-    "vegafusion[embed]"
+    "vegafusion[embed]",
+    "anywidget"
 ]
 doc = [
     "sphinx",
@@ -97,6 +98,7 @@ allow-direct-references = true
 
 [tool.hatch.build]
 include = ["/altair"]
+artifacts = ["altair/jupyter/js/index.js"]
 
 [tool.hatch.envs.default]
 features = ["dev"]
