--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ dev = [
     "m2r",
     "vega_datasets",
     "vl-convert-python>=0.11.2",
-    "mypy",
+    "mypy==1.4.1",
     "pandas-stubs",
     "types-jsonschema",
     "types-setuptools",
