Silence AnyWidget warning (and support hot-reload) in development mode

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,8 @@ dev = [
     "types-setuptools",
     "pyarrow>=11",
     "vegafusion[embed]>=1.4.0",
-    "anywidget"
+    "anywidget",
+    "watchfiles"
 ]
 doc = [
     "sphinx",
