Run doctests in altair module with `hatch run test`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ test = [
     "black --diff --color --check .",
     "ruff check .",
     "mypy altair tests",
-    "python -m pytest --pyargs --doctest-modules tests",
+    "python -m pytest --pyargs --doctest-modules tests altair",
 ]
 test-coverage = "python -m pytest --pyargs --doctest-modules --cov=altair --cov-report term altair"
 test-coverage-html = "python -m pytest --pyargs --doctest-modules --cov=altair --cov-report html altair"
