--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: black-ruff-mypy
+    name: ruff-mypy
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
@@ -17,13 +17,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[dev]
-    - name: Check formatting with black
-      run: |
-        black --diff --color .
-        black --check .
     - name: Lint with ruff
       run: |        
-        ruff check .
+        ruff check .        
+    - name: Check formatting with ruff
+      run: |
+        ruff format --diff .
+        ruff format --check .
     - name: Lint with mypy
       run: |
         mypy altair tests
