--- a/pyproject.toml
+++ b/pyproject.toml
@@ -218,6 +218,8 @@ module = [
     "nbformat.*",
     "ipykernel.*",
     "m2r.*",
+    # This refers to schemapi in the tools folder which is imported
+    # by the tools scripts such as generate_schema_wrapper.py
     "schemapi.*"
 ]
 ignore_missing_imports = true
