--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,7 +149,7 @@ publish-clean-build = [
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39", "py310", "py311"]
+target-version = ["py38", "py39", "py310", "py311", "py312"]
 include = '\.pyi?$'
 extend-exclude = '''
 /(
