--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          pip install .[all, dev]
           # pip install "selenium<4.3.0"
           # pip install altair_saver
       - name: Install specific jsonschema
