--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -23,4 +23,4 @@ body:
       label: Have you considered any alternative solutions?
   - type: markdown
     attributes:
-      value: By submitting this issue, you agree to follow our [Code of Conduct](../../CODE_OF_CONDUCT.md).
+      value: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/altair-viz/altair/blob/main/CODE_OF_CONDUCT.md).
