--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,17 +16,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      # - name: Set Up Chromedriver
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get --only-upgrade install google-chrome-stable
-      #     sudo apt-get -yqq install chromium-chromedriver
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install ".[all, dev]"
-          # pip install "selenium<4.3.0"
-          # pip install altair_saver
       - name: Install specific jsonschema
         # Only have to execute this if we don't want the latest jsonschema version
         if: ${{ matrix.jsonschema-version != 'latest' }}
@@ -39,7 +32,7 @@ jobs:
         # Also see https://github.com/vega/altair/pull/3114
         if: ${{ matrix.python-version == '3.8' }}
         run: |
-          pip uninstall -y pyarrow vegafusion vegafusion-python-embed
+          pip uninstall -y pyarrow vegafusion vegafusion-python-embed vl-convert-python anywidget
       - name: Maybe install lowest supported pandas version
         # We install the lowest supported pandas version for one job to test that
         # it still works. Downgrade to the oldest versions of pandas and numpy that include
@@ -72,18 +65,6 @@ jobs:
       - name: Test with pytest
         run: |
           pytest --doctest-modules tests
-      # - name: Selected tests without vl-convert-python
-      #   run: |
-      #     pip uninstall vl-convert-python --yes
-      #     pytest -m save_engine --doctest-modules tests
-      # - name: Selected tests without vl-convert-python and altair_saver
-      #   run: |
-      #     pip uninstall altair_saver --yes
-      #     pytest -m save_engine --doctest-modules tests
-      - name: Selected tests with vl-convert-python and without altair_saver
-        run: |
-          # pip install vl-convert-python
-          pytest -m save_engine --doctest-modules tests
       - name: Validate Vega-Lite schema
         run: |
           # We install all 'format' dependencies of jsonschema as check-jsonschema
