--- a/pyproject.toml
+++ b/pyproject.toml
@@ -205,6 +205,10 @@ max-complexity = 18
 markers = [
     "save_engine: marks some of the tests which are using an external package to save a chart to e.g. a png file. This mark is used to run those tests selectively in the build GitHub Action.",
 ]
+# Pytest does not need to search these folders for test functions.
+# They contain examples which are being executed by the
+# test_examples tests.
+norecursedirs = ["tests/examples_arguments_syntax", "tests/examples_methods_syntax"]
 
 [tool.mypy]
 warn_unused_ignores = true
