--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,12 @@ jobs:
               echo $files
               exit 1
           fi
+      - name: Temporarily debug gpd-3284; test geopandas
+        run: |
+          python -c "import geopandas as gpd; gpd.read_file('https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json', driver='GeoJSON')"
+      - name: Temporarily debug gpd-3284; test gdal
+        run: |
+          CPL_CURL_VERBOSE=YES ogrinfo -ro -al -so /vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json
       - name: Test with pytest
         run: |
           pytest --doctest-modules tests
