--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,9 +68,9 @@ jobs:
       - name: Temporarily debug gpd-3284; test fiona
         run: |
           python -c "import fiona; exec(\"\"\"with fiona.open('/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json') as features: columns = list(features.schema['properties']); print(len(columns))\"\"\")"
-      - name: Temporarily debug gpd-3284; test gdal
-        run: |
-          python -c "import os; import subprocess; os.environ['CPL_CURL_VERBOSE'] = 'YES'; subprocess.run(['ogrinfo', '-ro', '-al', '-so', '/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'])"
+      # - name: Temporarily debug gpd-3284; test gdal
+      #   run: |
+      #     python -c "import os; import subprocess; os.environ['CPL_CURL_VERBOSE'] = 'YES'; subprocess.run(['ogrinfo', '-ro', '-al', '-so', '/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'])"
       - name: Test with pytest
         run: |
           pytest --doctest-modules tests
