--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,9 @@ jobs:
       - name: Temporarily debug gpd-3284; test geopandas
         run: |
           python -c "import geopandas as gpd; gdf = gpd.read_file('https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json', driver='GeoJSON'); assert not gdf.empty"
+      - name: Temporarily debug gpd-3284; test vega_datasets
+        run: |
+          python -c "from vega_datasets import data; import geopandas as gpd; gdf_quakies = gpd.read_file(data.earthquakes.url, driver='GeoJSON'); assert not gdf_quakies.empty"          
       - name: Temporarily debug gpd-3284; test fiona
         run: |
           python -c "import fiona; exec(\"\"\"with fiona.open('/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json') as features: columns = list(features.schema['properties']); print(len(columns))\"\"\")"
