no need for logging module

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
           python -c "import geopandas as gpd; print(len(gpd.read_file('https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json', driver='GeoJSON')))"
       - name: Test Fiona
         run: |
-          python -c "import logging; logging.basicConfig(level=logging.DEBUG); import fiona; exec(\"\"\"with fiona.Env(CPL_DEBUG=True, CPL_CURL_VERBOSE=True, CPL_TIMESTAMP=True): features = fiona.open('/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'); print(len(features.schema['properties']))\"\"\")"
+          python -c "import fiona; exec(\"\"\"with fiona.Env(CPL_DEBUG=True, CPL_CURL_VERBOSE=True, CPL_TIMESTAMP=True): features = fiona.open('/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'); print(len(features.schema['properties']))\"\"\")"
       # - name: Temporarily debug gpd-3284; test gdal
       #   run: |
       #     python -c "import os; import subprocess; os.environ['CPL_CURL_VERBOSE'] = 'YES'; subprocess.run(['ogrinfo', '-ro', '-al', '-so', '/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'])"
