--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,12 +71,9 @@ jobs:
       - name: Test Get content-length
         run: |
           python -c "import urllib.request; url='https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'; print(urllib.request.urlopen(urllib.request.Request(url, method='HEAD')).headers['Content-Length'])"
-      - name: Test Fiona
-        run: |
-          python -c "import logging; logging.basicConfig(level=logging.DEBUG); import fiona; exec(\"\"\"with fiona.Env(CPL_DEBUG=True, CPL_CURL_VERBOSE=True, CPL_TIMESTAMP=True): features = fiona.open('/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'); print(len(features.schema['properties']))\"\"\")"
-      # - name: Temporarily debug gpd-3284; test gdal
+      # - name: Test Fiona
       #   run: |
-      #     python -c "import os; import subprocess; os.environ['CPL_CURL_VERBOSE'] = 'YES'; subprocess.run(['ogrinfo', '-ro', '-al', '-so', '/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'])"
+      #     python -c "import logging; logging.basicConfig(level=logging.DEBUG); import fiona; exec(\"\"\"with fiona.Env(CPL_DEBUG=True, CPL_CURL_VERBOSE=True, CPL_TIMESTAMP=True): features = fiona.open('/vsicurl/https://cdn.jsdelivr.net/npm/vega-datasets@v1.29.0/data/earthquakes.json'); print(len(features.schema['properties']))\"\"\")"
       - name: Test with pytest
         run: |
           pytest --doctest-modules tests
