--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "hatchling.build"
 name = "altair"
 authors = [{ name = "Vega-Altair Contributors" }]
 dependencies = [
-    "typing_extensions>=4.0.1; python_version<\"3.11\"",
+    "typing_extensions>=4.10.0; python_version<\"3.13\"",
     "jinja2",
     # If you update the minimum required jsonschema version, also update it in build.yml
     "jsonschema>=3.0",
@@ -164,6 +164,7 @@ exclude = [
 ]
 
 [tool.ruff.lint]
+extend-safe-fixes=["SIM101"]
 select = [
     # flake8-bugbear
     "B",
@@ -177,6 +178,8 @@ select = [
     "F",
     # flake8-tidy-imports
     "TID",
+    # flake8-simplify
+    "SIM101"
 ]
 ignore = [  
     # Whitespace before ':'
