ci: Add additional `ruff` rules to `pyproject.toml`
Only highly autofixable groups from [#3430](https://github.com/vega/altair/issues/3430).
Aiming to refine further, depending on how much manual fixing this generates.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -172,14 +172,26 @@ select = [
     "C4",
     # pycodestyle-error
     "E",
-    # pycodestyle-warning
-    "W",
+    # flake8-errmsg
+    "EM",
     # pyflakes
     "F",
+    # flynt
+    "FLY",
+    # flake8-pie
+    "PIE",
+    # Ruff-specific rules
+    "RUF",
+    # flake8-simplify
+    "SIM",
+    # flake8-type-checking
+    "TCH",
     # flake8-tidy-imports
     "TID",
-    # flake8-simplify
-    "SIM101"
+    # pyupgrade
+    "UP",
+    # pycodestyle-warning
+    "W",
 ]
 ignore = [  
     # Whitespace before ':'
