--- a/pyproject.toml
+++ b/pyproject.toml
@@ -165,7 +165,7 @@ exclude = [
 
 [tool.ruff.lint]
 preview = true
-extend-safe-fixes=["SIM101","SIM102", "SIM105","SIM117"]
+extend-safe-fixes=["SIM101","SIM102", "SIM103","SIM105","SIM117", "C419"]
 select = [
     # flake8-bugbear
     "B",
