ci: add `pylint` fixes to `extend-safe-fixes`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -173,6 +173,10 @@ extend-safe-fixes=[
     "SIM117",
     # unnecessary-comprehension-in-call
     "C419",
+    # literal-membership
+    "PLR6201",
+    # unspecified-encoding
+    "PLW1514",
 ]
 extend-select=[
     # refurb
