ci: add `PTH` rules
`flake8-use-pathlib` rules all require manual fixes.
> Found 70 errors.

<details>
<summary>Details</summary>

```md
20      PTH118  `os.path.join()` should be replaced by `Path` with `/` operator
12      PTH120  `os.path.dirname()` should be replaced by `Path.parent`
11      PTH100  `os.path.abspath()` should be replaced by `Path.resolve()`
11      PTH123  `open()` should be replaced by `Path.open()`
 7      PTH110  `os.path.exists()` should be replaced by `Path.exists()`
 6      PTH107  `os.remove()` should be replaced by `Path.unlink()`
 3      PTH103  `os.makedirs()` should be replaced by `Path.mkdir(parents=True)`
```

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -209,6 +209,8 @@ select = [
     "FLY",
     # flake8-pie
     "PIE",
+    # flake8-use-pathlib
+    "PTH",
     # Ruff-specific rules
     "RUF",
     # flake8-simplify
