ci(typing): adds `generate-schema-wrapper` script to `hatch`
Rewrites and reformats all annotations in `altair/vegalite/v?/schema`
- Meaning that the original code stays the same:

```
>>> ruff check altair/vegalite/v?/schema --fix --exit-zero
Found 13006 errors (13006 fixed, 0 remaining).
>>> ruff format altair/vegalite/v?/schema
4 files reformatted
>>> ruff check altair/vegalite/v?/schema --statistics
```

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,15 @@ artifacts = ["altair/jupyter/js/index.js"]
 features = ["all", "dev"]
 
 [tool.hatch.envs.default.scripts]
+generate-schema-wrapper = [
+    "mypy tools/schemapi/schemapi.py",
+    "python tools/generate_schema_wrapper.py",
+    "ruff check altair/vegalite/v?/schema --fix --exit-zero",
+    "ruff format altair/vegalite/v?/schema",
+    "ruff check altair/vegalite/v?/schema --statistics",
+    "mypy altair tests",
+    "python -m pytest --pyargs --doctest-modules tests altair"
+]
 test = [
     "ruff check .",
     "ruff format --diff --check .",
