docs(typing): `FA100` on `alt.vegalite.v5.api` and manual annotation rewrites
### `api`
A unique, but significant, difference to the other commits is the large number of module prefixed annotations that can be shortened.
`TopLevelMixin.project` shows the greatest reduction in combined characters for annotations, but there are small improvements throughout.

I've made all of these `TYPE_CHECKING`-only imports explicit, to highlight a new path forward this opens up. There are many repeat/similar `Union` types, which can now be declared in another module - without concern for circular import issues.

### `v5.__init__`
These changes have also removed the need for both the import of `expr` in `api`, and the `# type: ignore[no-redef]` in `v5.__init__`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -288,9 +288,6 @@ unfixable= [
 [tool.ruff.lint.mccabe]
 max-complexity = 18
 
-[tool.ruff.lint.per-file-ignores]
-"altair/vegalite/v?/api.py" = ["FA100", "TCH", "UP006", "UP007"]
-
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
@@ -325,3 +322,5 @@ module = [
 ignore_missing_imports = true
 [tool.pyright]
 extraPaths=["./tools"]
+pythonPlatform="All"
+pythonVersion="3.8"
