test: add pytest rules `PT` and fix `PT001` violations
https://docs.astral.sh/ruff/rules/pytest-fixture-incorrect-parentheses-style/

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -225,6 +225,8 @@ select = [
     "FLY",
     # flake8-pie
     "PIE",
+    # flake8-pytest-style
+    "PT",
     # flake8-use-pathlib
     "PTH",
     # Ruff-specific rules
